--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "axios": "^1.12.2",
     "expo": "~54.0.10",
     "expo-asset": "~12.0.9",
+    "expo-device": "~8.0.9",
+    "expo-file-system": "^19.0.17",
     "expo-image-picker": "~17.0.8",
+    "expo-media-library": "^18.2.0",
+    "expo-notifications": "~0.32.12",
     "expo-router": "^6.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
