--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "HULAM",
-    "slug": "HULAM",
-    "scheme": "com.hulam.app",
+    "name": "TRAILLEND",
+    "slug": "TRAILLEND",
+    "scheme": "com.traillend.app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/HULAM-ICON.png",
+    "icon": "./assets/TRAILLEND-ICON.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/HULAM-ICON.png",
+      "image": "./assets/TRAILLEND-ICON.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,13 +18,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/HULAM-ICON.png",
+        "foregroundImage": "./assets/TRAILLEND-ICON.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/HULAM-ICON.png"
+      "favicon": "./assets/TRAILLEND-ICON.png"
     },
     "plugins": [
       "expo-router"
