--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/drawer": "^7.5.8",
+    "@types/react": "19.1.10",
     "axios": "^1.12.2",
-    "expo": "~54.0.10",
+    "expo": "54.0.20",
     "expo-asset": "~12.0.9",
     "expo-device": "~8.0.9",
     "expo-file-system": "^19.0.17",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-media-library": "^18.2.0",
     "expo-notifications": "~0.32.12",
-    "expo-router": "^6.0.8",
+    "expo-router": "6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-reanimated": "^4.1.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-web": "^0.21.0",
@@ -35,6 +38,8 @@
   },
   "private": true,
   "devDependencies": {
-    "cross-env": "^10.1.0"
+    "@types/react": "^19.2.2",
+    "cross-env": "^10.1.0",
+    "typescript": "^5.9.3"
   }
 }
