--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "expo": "^54.0.20",
     "expo-asset": "~12.0.9",
+    "expo-blur": "^15.0.7",
     "expo-device": "~8.0.9",
     "expo-file-system": "^19.0.17",
     "expo-image-picker": "~17.0.8",
